--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ button:hover { background: #3367D6; }
     <button onclick="setLayout('sphere')">Sphere</button>
     <button onclick="setLayout('helix')">Helix</button>
     <button onclick="setLayout('grid')">Grid</button>
-	<button onclick="setLayout('pyramid')">Pyramid</button>
+	<button onclick="setLayout('tetrahedron')">Tetrahedron</button>
 </div>
 
 <!-- Your script -->
